// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - App renders correctly "/cart" route 1`] = `
Array [
  <Header />,
  .c0 {
  margin-top: 6rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c4 {
  background: #00a09f;
  color: #ffffff;
  display: block;
  font-size: 1.8rem;
  font-weight: 600;
  padding: 1.2rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: 96rem;
  margin: 0 auto;
}

.c3 {
  bottom: 0;
  left: 0;
  padding: 1rem;
  position: fixed;
  width: 100%;
  background: #ffffff;
  border-top: 1px solid #b0b0b0;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

<main
    className="c0"
  >
    <article
      className="c1"
    >
      <h1
        className="c2"
      >
        Cart
      </h1>
      <Item />
      <OrderSummary />
    </article>
    <div
      className="c3"
    >
      <a
        className="c4"
        data-testid="next-step-button"
        href="/checkout/delivery"
        onClick={[Function]}
      >
        Checkout
      </a>
    </div>
  </main>,
]
`;

exports[`COMPONENT - App renders correctly "/checkout" route 1`] = `
Array [
  <Header />,
  .c0 {
  margin-top: 6rem;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

<main
    className="c0"
  >
    <Navigation />
    <article
      className="c1"
    />
  </main>,
]
`;

exports[`COMPONENT - App renders correctly default route 1`] = `
Array [
  <Header />,
  .c0 {
  margin-top: 6rem;
}

.c4 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
}

.c4:last-child {
  margin-bottom: 0;
}

.c5 {
  color: #00a09f;
  font-weight: 700;
  font-size: 1.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c3 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c2 {
  padding-top: 3rem;
}

.c2:last-child {
  padding-bottom: 6rem;
}

<main
    className="c0"
  >
    <article
      className="c1"
    >
      <section
        className="c2"
      >
        <h1
          className="c3"
        >
          Project goals
        </h1>
        <p
          className="c4"
        >
          Build base for 
          <strong>
            scalable front-end architecture
          </strong>
           — easy to work with for developers and QA, fully transparent for stakeholders. 
          <strong>
            Automate
          </strong>
           as many processes as possible and make their results easily available.
        </p>
        <p
          className="c4"
        >
          Make frontend communicate with backend API only by thin layer of services, making it more resilient to inevitable changes.
        </p>
      </section>
      <section
        className="c2"
      >
        <h1
          className="c3"
        >
          Workflow
        </h1>
        <p
          className="c4"
        >
          Small, easy to estimate tasks in backlog. Code crafted and delivered according to
           
          <a
            className="c5"
            href="https://www.atlassian.com/git/tutorials/comparing-workflows"
          >
            git workflow
          </a>
           — commit and issue pull requests often for easy collaboration between programmers, designers and QA (no one should be afraid to participate in PRs review process). Because only small chunks of code are merged it's easier and faster to recover from bugs or discover 
          <strong>
            accessibility and usability
          </strong>
           problems.
        </p>
      </section>
      <section
        className="c2"
      >
        <a
          className="c5"
          href="/cart"
          onClick={[Function]}
        >
          Take me to Cart
        </a>
      </section>
    </article>
  </main>,
]
`;
